// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Links as well as NavLinks 1`] = `
Array [
  <ul
    className="header"
    history={
      Object {
        "action": "PUSH",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 3,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "test",
          "pathname": "/topics",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <li>
      <a
        aria-current="page"
        className="active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        Home
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/about"
        onClick={[Function]}
      >
        About
      </a>
    </li>
    <li>
      <a
        aria-current="page"
        className="active"
        href="/topics"
        onClick={[Function]}
        style={Object {}}
      >
        Topics
      </a>
    </li>
    <br />
    <li>
      <a
        aria-current={null}
        href="/fr/topics"
        onClick={[Function]}
      >
        Français
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/en/topics"
        onClick={[Function]}
      >
        English
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/pig/topics"
        onClick={[Function]}
      >
        Pig Latin
      </a>
    </li>
  </ul>,
  <hr />,
  <h2>
    Topics
  </h2>,
  <ul>
    <li>
      <a
        href="/topics/rendering"
        onClick={[Function]}
      >
        Rendering with React
      </a>
    </li>
    <li>
      <a
        href="/topics/components"
        onClick={[Function]}
      >
        Components
      </a>
    </li>
    <li>
      <a
        href="/topics/props_v_state"
        onClick={[Function]}
      >
        Props v. State
      </a>
    </li>
  </ul>,
  <h3>
     
    Please select a topic
     
  </h3>,
]
`;

exports[`renders text in another locale 1`] = `
Array [
  <ul
    className="header"
    history={
      Object {
        "action": "PUSH",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 2,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "test",
          "pathname": "/fr/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <li>
      <a
        aria-current="page"
        className="active"
        href="/fr/"
        onClick={[Function]}
        style={Object {}}
      >
        Accueil
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/fr/about"
        onClick={[Function]}
      >
        À propos
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/fr/topics"
        onClick={[Function]}
      >
        Sujets
      </a>
    </li>
    <br />
    <li>
      <a
        aria-current="page"
        className="active"
        href="/fr/"
        onClick={[Function]}
        style={Object {}}
      >
        Français
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/en/"
        onClick={[Function]}
      >
        English
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/pig/"
        onClick={[Function]}
      >
        Pig Latin
      </a>
    </li>
  </ul>,
  <hr />,
  <h2>
    Accueil
  </h2>,
  <p>
    Ceci est la page d'accueil
  </p>,
]
`;

exports[`renders with full navbar and Home page 1`] = `
Array [
  <ul
    className="header"
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <li>
      <a
        aria-current="page"
        className="active"
        href="/"
        onClick={[Function]}
        style={Object {}}
      >
        Home
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/about"
        onClick={[Function]}
      >
        About
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/topics"
        onClick={[Function]}
      >
        Topics
      </a>
    </li>
    <br />
    <li>
      <a
        aria-current={null}
        href="/fr/"
        onClick={[Function]}
      >
        Français
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/en/"
        onClick={[Function]}
      >
        English
      </a>
    </li>
    <li>
      <a
        aria-current={null}
        href="/pig/"
        onClick={[Function]}
      >
        Pig Latin
      </a>
    </li>
  </ul>,
  <hr />,
  <h2>
    Home
  </h2>,
  <p>
    This is the homepage
  </p>,
]
`;
